# vcpkg-base

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg-configuration.json  vcpkg.cmake  vcpkg.json
cmakes/: flatbuffers.cmake  protobuf.cmake  protobufv2.cmake  tools.cmake
ports/aerospike-client/: makefile.patch  openssl.patch  portfile.cmake  usage  vcpkg.json
ports/apollo-client/: cmake.patch  portfile.cmake  usage  vcpkg.json
ports/babylon/: portfile.cmake  usage  vcpkg.json
ports/cpp-common/: portfile.cmake  usage  vcpkg.json
ports/datastax-cpp-driver/: cmake.patch  cmake_deps.patch  portfile.cmake  usage  vcpkg.json
ports/gperftools/: build.patch  portfile.cmake  usage  vcpkg.json
ports/grpc/: 00006_fix_gettid.patch  00009_remove_plugins.patch  portfile.cmake  vcpkg.json
ports/kfpanda-cpp-sdk/: portfile.cmake  usage  vcpkg.json
ports/kung-fu-panda/: portfile.cmake  vcpkg.json
ports/kung-fu-panda-protocols/: portfile.cmake  usage  vcpkg.json
ports/leveldb/: build.patch  leveldbConfig.cmake.in  portfile.cmake  usage  vcpkg.json
ports/mxnet/: portfile.cmake  vcpkg.json
ports/opentelemetry-cpp/: cmake.patch  portfile.cmake
ports/polaris-cpp/: portfile.cmake  re_archive.sh  usage  vcpkg.json
ports/ppconsul/: build.patch  portfile.cmake  usage  vcpkg.json
ports/seastar/: cmake_dest.patch  portfile.cmake  usage  vcpkg.json
ports/sfl-library/: portfile.cmake  usage  vcpkg.json
scripts/: get_sha512.sh  install_dependencies.sh  install_vcpkg.sh  install_vcpkg_pure.sh  update_port.sh  vcpkg_env_init.sh
src/: main.cpp
versions/: baseline.json
versions/a-/: aerospike-client.json  apollo-client.json
versions/b-/: babylon.json
versions/c-/: cpp-common.json
versions/d-/: datastax-cpp-driver.json
versions/g-/: gperftools.json  grpc.json
versions/k-/: kfpanda-cpp-sdk.json  kung-fu-panda-protocols.json
versions/l-/: leveldb.json
versions/m-/: mxnet.json
versions/o-/: opentelemetry-cpp.json
versions/p-/: polaris-cpp.json  ppconsul.json
(+2 files in other folders)
